[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["wannasleep <wannasleeprightnowww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-simplify = "^0.21.0"
flake8-async = "^24.6.1"
flake8-unused-arguments = "^0.0.13"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.15.0"
flake8-quotes = "^3.4.0"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"
flake8-functions = "^0.0.8"
flake8-alphabetize = "^0.0.21"
flake8-import-order = "^0.18.2"
flake8-annotations-coverage = "^0.0.6"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
